<?xml version="1.0"?>
<package format="3">
  <name>lqr_controller_cpp</name>
  <version>0.1.0</version>
  <description>ROS 2 C++ implementation of the LQR controller for a two-wheeled self-balancing robot.</description>

  <maintainer email="523ayrata@mail.ru">Airat</maintainer>
  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Exec -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Test (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
